--- a/Modules/CourseSetting/Resources/assets/css/style.css
+++ b/Modules/CourseSetting/Resources/assets/css/style.css
@@ -144,15 +144,15 @@ h6 a {
 }
 
 /* line 56, ../../../../Desktop/role_permission/scss/_reset.scss */
-ul {
+/* ul {
   margin: 0px;
   padding: 0px;
-}
+} */
 
 /* line 60, ../../../../Desktop/role_permission/scss/_reset.scss */
-li {
+/* li {
   list-style: none;
-}
+} */
 
 /* line 63, ../../../../Desktop/role_permission/scss/_reset.scss */
 p {
